--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
+    <link rel="manifest" href="./manifest.json">
     <title></title>
     <!-- Some Google fonts -->
     <link href="https://fonts.googleapis.com/css?family=Montserrat:900|Permanent+Marker|Roboto" rel="stylesheet">
@@ -16,10 +17,6 @@
         font-family: 'Roboto', sans-serif;
       }
    </style>
-
-   <script>
-      var launch = false
-   </script>
   <body>
     <noscript>
       <strong>We're sorry but this demo project doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
