--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -3,14 +3,49 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <link rel="manifest" href="./manifest.json">
     <title></title>
     <!-- Some Google fonts -->
     <link href="https://fonts.googleapis.com/css?family=Montserrat:900|Permanent+Marker|Roboto" rel="stylesheet">
+    <link rel="apple-touch-icon" sizes="180x180" href="/img/icons/180.png">
     <!-- Font awesome from CDN -->
   </head>
+  <style>
+  
+    .ad2hs-prompt {
+      background-color: rgb(59, 134, 196); /* Blue */
+      border: none;
+      display: none;
+      color: white;
+      padding: 15px 32px;
+      text-align: center;
+      text-decoration: none;
+      font-size: 16px;
+      position: absolute;
+      margin: 0 1rem 1rem;
+      left: 0;
+      right: 0;
+      bottom: 0;
+      width: calc(100% - 32px);
+    }
+    
+    .ios-prompt {
+      background-color: #fcfcfc;
+      border: 1px solid #666;
+      display: none;
+      padding: 0.8rem 1rem 0 0.5rem;
+      text-decoration: none;
+      font-size: 16px;
+      color: #555;
+      position: absolute;
+      margin: 0 auto 1rem;
+      left: 1rem;
+      right: 1rem;
+      bottom: 0;
+    }
+  </style>
 
    <style>
       html,body {
@@ -24,4 +59,56 @@
     <div id="app"></div>
     <!-- built files will be auto injected -->
   </body>
+
+  <script type="text/javascript">
+    function addToHomeScreen() {
+      let a2hsBtn = document.querySelector(".ad2hs-prompt");  // hide our user interface that shows our A2HS button
+      a2hsBtn.style.display = 'none';  // Show the prompt
+      deferredPrompt.prompt();  // Wait for the user to respond to the prompt
+      deferredPrompt.userChoice
+        .then(function(choiceResult){
+      if (choiceResult.outcome === 'accepted') {
+        console.log('User accepted the A2HS prompt');
+      } else {
+        console.log('User dismissed the A2HS prompt');
+      }
+      deferredPrompt = null;
+    });}
+
+    function showAddToHomeScreen() {
+      let a2hsBtn = document.querySelector(".ad2hs-prompt");
+      a2hsBtn.style.display = "block";
+      a2hsBtn.addEventListener("click", addToHomeScreen);
+    }
+    let deferredPrompt;
+    window.addEventListener('beforeinstallprompt', function (e) {
+      // Prevent Chrome 67 and earlier from automatically showing the prompt
+      e.preventDefault();
+      // Stash the event so it can be triggered later.
+      deferredPrompt = e;
+      showAddToHomeScreen();
+    });
+
+  
+    function showIosInstall() {
+      let iosPrompt = document.querySelector(".ios-prompt");
+      iosPrompt.style.display = "block";
+      iosPrompt.addEventListener("click", () => {
+        iosPrompt.style.display = "none";
+      });
+    }
+  
+    // Detects if device is on iOS
+    const isIos = () => {
+      const userAgent = window.navigator.userAgent.toLowerCase();
+      return /iphone|ipad|ipod/.test( userAgent );
+    }
+    // Detects if device is in standalone mode
+    const isInStandaloneMode = () => ('standalone' in window.navigator) && (window.navigator.standalone);
+    // Checks if should display install popup notification:
+    if (isIos() && !isInStandaloneMode()) {
+      // this.setState({ showInstallMessage: true });
+      showIosInstall();
+    }
+  </script>
 </html>
